# synthesis-agent

./: pyproject.toml
notebooks/: case_study_01_battery_cathodes.ipynb  case_study_02_perovskites_rare.ipynb  case_study_03_thermoelectrics.ipynb  methods.ipynb
paper_figures/: fig1_umap_embedding.py  fig2_distance_distribution.py  fig3_retrieval_curves.py  fig4_calibration.py  fig5_search_tree.py
results/: benchmark_results.json
scripts/: run_benchmark.py
sky/cli/: main.py
sky/core/: synthesis_agent.py
src/: agent.py  embedding.py  search_api.py
src/evaluation/: ablation.py  baselines.py  benchmark.py  confidence_calibration.py  llm_eval.py  mock_llm.py  sky_retriever.py  statistics.py  test_set_builder.py
src/visualization/: case_study_plots.py  embedding_viz.py
tests/: conftest.py  test_baselines.py  test_confidence_calibration.py  test_retrieval.py
tests/fixtures/: test_neighbors.json  test_recipes.json
