[project]
name = "synthesis-agent"
version = "0.1.0"
description = "SKY - Synthesis Knowledge Yield Agent for materials synthesis discovery"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ase>=3.26.0",
    "h5py>=3.14.0",
    "mace-torch>=0.3.14",
    "matminer>=0.9.3",
    "mp-api>=0.45.8",
    "pymatgen>=2025.6.14",
    "typer>=0.17.0",
    "rich>=14.0.0",
    "openai>=1.0.0",
    "openai-agents>=0.0.19",
    "monty>=2025.0.0",
    "python-dotenv>=1.0.0",
    "jupyterlab>=4.4.7",
]

[project.optional-dependencies]
evaluation = [
    "umap-learn>=0.5.7",
    "matplotlib>=3.9.0",
    "seaborn>=0.13.0",
    "scipy>=1.14.0",
    "pytest>=8.0.0",
]

[project.scripts]
sky = "sky.cli.main:main"

[tool.setuptools]
packages = ["sky", "sky.cli", "sky.core", "src", "src.utils", "src.evaluation", "src.visualization"]
